# community-connect-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
attachments/: models.py  services.py  tasks.py
attachments/migrations/: 0001_initial.py  0002_initial.py  0003_attachment_created_at.py
core/: celery.py  settings.py  urls.py
notifications/: models.py  services.py  tasks.py  tests.py
notifications/migrations/: 0001_initial.py
reports/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_initial.py  0003_report_custom_category.py  0004_report_status_remark.py
theme/: views.py
theme/templates/: base.html  report_detail.html  report_list.html
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
